no bulma, bootstrap, start of single story block

--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
 ---
 layout: base
 ---
-<h1>Hi there</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="single-story">
+        <div class="story-title">
+          Jackpot Lottery – How One Company Hides Its Billions
+        </div>
+        <div class="story-summary">
+          <p>
+            Gtech engaged in corporate inversion with IGT to slash its tax rate from 35% to 18%; holds $2b offshore, avoids $600m in jurisdictions where real economic activity occurs.
+          </p>
+          <ul>
+            <li>Exposes technique of corporate inversion used by Gtech during merger with IGT that slashed tax rates in half (35% to 18%)</li>
+            <li>Exposes $700 million in avoided tax annually where real economic activity takes place</li>
+            <li>Exposes offshore earnings of $2 billion</li>
+            <li>Exposes how this happened through Cyprus-based holding entity that received “fees” from subsidiaries located in real countries like SA, India, etc. Revenue of $200m with earnings of $600 million withheld.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
