improved single story box

--- a/index.html
+++ b/index.html
@@ -3,23 +3,42 @@ layout: base
 ---
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
-      <div class="single-story">
-        <div class="story-title">
-          Jackpot Lottery – How One Company Hides Its Billions
+    <div class="col-md-6">
+      <article class="single-story">
+        <div class="single-story-content">
+          <div class="story-title">
+            <h3>Jackpot Lottery – How One Company Hides Its Billions</h3>
+          </div>
+          <div class="story-author">
+            Written by Khadija Sharife, edited/byline by Jeff Lowenstein
+          </div>
+          <div class="story-meta">
+            <a href="" class="badge badge-secondary">World Policy Journal</a>
+            <a href="" class="badge badge-primary">@trustafrica</a>
+            <a href="" class="badge badge-primary">#Gamingthelottery</a>
+            <a href="" class="badge badge-primary">#IFF</a>
+          </div>
+          <div class="story-summary">
+            <p>
+              Gtech engaged in corporate inversion with IGT to slash its tax rate from 35% to 18%; holds $2b offshore, avoids $600m in jurisdictions where real economic activity occurs.
+            </p>
+            <ul>
+              <li>Exposes technique of corporate inversion used by Gtech during merger with IGT that slashed tax rates in half (35% to 18%)</li>
+              <li>Exposes $700 million in avoided tax annually where real economic activity takes place</li>
+              <li>Exposes offshore earnings of $2 billion</li>
+              <li>Exposes how this happened through Cyprus-based holding entity that received “fees” from subsidiaries located in real countries like SA, India, etc. Revenue of $200m with earnings of $600 million withheld.</li>
+            </ul>
+          </div>
         </div>
-        <div class="story-summary">
-          <p>
-            Gtech engaged in corporate inversion with IGT to slash its tax rate from 35% to 18%; holds $2b offshore, avoids $600m in jurisdictions where real economic activity occurs.
-          </p>
-          <ul>
-            <li>Exposes technique of corporate inversion used by Gtech during merger with IGT that slashed tax rates in half (35% to 18%)</li>
-            <li>Exposes $700 million in avoided tax annually where real economic activity takes place</li>
-            <li>Exposes offshore earnings of $2 billion</li>
-            <li>Exposes how this happened through Cyprus-based holding entity that received “fees” from subsidiaries located in real countries like SA, India, etc. Revenue of $200m with earnings of $600 million withheld.</li>
-          </ul>
+        <div class="story-footer">
+          <a class="story-footer-item share" href="">
+            Share
+          </a>
+          <a class="story-footer-item read" href="">
+            Read
+          </a>
         </div>
-      </div>
+      </article>
     </div>
   </div>
 </div>
